--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -2,5 +2,6 @@
     "type":  "PTE",
     "templateUrl":  "https://github.com/microsoft/AL-Go-PTE@main",
     "githubrunner":  "self-hosted",
-    "BcContainerHelperVersion":  "4.0.1"
+    "BcContainerHelperVersion":  "4.0.1",
+    "environments":  [ "QA" ]
 }
