'Updated AL-Go System Files'

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,7 +1,9 @@
-{
+﻿{
     "type":  "PTE",
-    "templateUrl":  "https://github.com/microsoft/AL-Go-PTE@main",
+    "templateUrl":  "https://github.com/microsoft/AL-Go-PTE@preview",
     "githubrunner":  "self-hosted",
     "BcContainerHelperVersion":  "4.0.1",
-    "environments":  [ "QA" ]
+    "environments":  [
+                         "QA"
+                     ]
 }
