--- a/app1/app.json
+++ b/app1/app.json
@@ -11,7 +11,12 @@
     "url":  "",
     "logo":  "",
     "dependencies":  [
-
+                         {
+                             "id": "1631b0e7-f7b2-429b-948d-318e375c66da",
+                             "publisher": "Freddy",
+                             "name": "PublicDependencyApp",
+                             "version": "1.0.0.0"
+                         }
                      ],
     "screenshots":  [
 
