--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -9,5 +9,6 @@
             "repo": "https://github.com/businesscentralapps/publicdependency",
             "release_status":  "release"
         }
-    ]
+    ],
+    "generateDependencyArtifact":  true
 }
