--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 ﻿{
     "type":  "PTE",
-    "templateUrl":  "https://github.com/microsoft/AL-Go-PTE@preview",
+    "templateUrl":  "https://github.com/freddydk/AL-Go-PTE@main",
     "githubrunner":  "self-hosted",
     "BcContainerHelperVersion":  "4.0.1",
     "environments":  [
