--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -3,5 +3,12 @@
     "appFolders":  [
     ],
     "testFolders":  [
+    ],
+    "appDependencyProbingPaths": [
+        {
+            "repo": "https://github.com/FreundDK/common",
+            "release_status":  "latestBuild",
+	    	"AuthTokenSecret":  "GhTokenWorkflow"
+        }
     ]
 }
