--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -3,5 +3,13 @@
     "appFolders":  [
     ],
     "testFolders":  [
+    ],
+    "appDependencyProbingPaths": [
+        {
+            "repo": "https://github.com/FreundDKorg/common",
+            "release_status":  "latestBuild",
+	    	"AuthTokenSecret":  "GhTokenWorkflow"
+        }
     ]
+
 }
