--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -10,6 +10,7 @@
             "release_status":  "latestBuild",
 	    	"AuthTokenSecret":  "GhTokenWorkflow"
         }
-    ]
+    ],
+    "generateDependencyArtifact":  true
 
 }
