--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -9,6 +9,9 @@
             "repo": "https://github.com/FreundDKorg/common",
             "release_status":  "latestBuild",
 	    	"AuthTokenSecret":  "GhTokenWorkflow"
+        },
+        {
+            "repo": "https://github.com/businesscentralapps/publicdependency"
         }
     ],
     "generateDependencyArtifact":  true
