--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -5,5 +5,8 @@
                    ],
     "testFolders":  [
 
-                    ]
+                    ],
+    "configPackages": [
+            "STANDARD"
+        ]
 }
