--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -8,5 +8,6 @@
                          "PROD (PROD)"
                      ],
     "FAT_AuthContextSecretName":  "QA_AuthContext",
-    "PROD_AuthContextSecretName":  "QA_AuthContext"
+    "PROD_AuthContextSecretName":  "QA_AuthContext",
+    "doNotRunBcptTests": true
 }
