--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -25,5 +25,5 @@
         "Dependencies\\*.zip"
                     ],
     "RepoVersion":  "1.1",
-    "failon":  "Warning"
+    "failOn":  "Warning"
 }
