--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -10,5 +10,5 @@
     "FAT_AuthContextSecretName":  "QA_AuthContext",
     "PROD_AuthContextSecretName":  "QA_AuthContext",
     "doNotRunBcptTests":  true,
-    "useGitHubPackages":  true
+    "useGitHubPackagesForDependencies":  true
 }
