--- a/.github/workflows/CreateRelease.yaml
+++ b/.github/workflows/CreateRelease.yaml
@@ -69,26 +69,26 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: microsoft/AL-Go/Actions/WorkflowInitialize@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/WorkflowInitialize@EnableExternalRulesets
         with:
           shell: powershell
           eventId: "DO0094"
 
       - name: Read settings
         id: ReadSettings
-        uses: microsoft/AL-Go/Actions/ReadSettings@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/ReadSettings@EnableExternalRulesets
         with:
           shell: powershell
           get: templateUrl,repoName
 
       - name: Determine Projects
         id: determineProjects
-        uses: microsoft/AL-Go/Actions/DetermineProjectsToBuild@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/DetermineProjectsToBuild@EnableExternalRulesets
         with:
           shell: powershell
 
       - name: Check for updates to AL-Go system files
-        uses: microsoft/AL-Go/Actions/CheckForUpdates@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/CheckForUpdates@EnableExternalRulesets
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
@@ -173,7 +173,7 @@ jobs:
 
       - name: Prepare release notes
         id: createreleasenotes
-        uses: microsoft/AL-Go/Actions/CreateReleaseNotes@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/CreateReleaseNotes@EnableExternalRulesets
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
@@ -216,13 +216,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Read settings
-        uses: microsoft/AL-Go/Actions/ReadSettings@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/ReadSettings@EnableExternalRulesets
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: microsoft/AL-Go/Actions/ReadSecrets@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/ReadSecrets@EnableExternalRulesets
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -259,7 +259,7 @@ jobs:
             });
 
       - name: Deliver to NuGet
-        uses: microsoft/AL-Go/Actions/Deliver@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/Deliver@EnableExternalRulesets
         if: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).nuGetContext != '' }}
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
@@ -272,7 +272,7 @@ jobs:
           atypes: 'Apps,TestApps'
 
       - name: Deliver to Storage
-        uses: microsoft/AL-Go/Actions/Deliver@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/Deliver@EnableExternalRulesets
         if: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).storageContext != '' }}
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
@@ -309,13 +309,13 @@ jobs:
     needs: [ CreateRelease, UploadArtifacts ]
     steps:
       - name: Read settings
-        uses: microsoft/AL-Go/Actions/ReadSettings@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/ReadSettings@EnableExternalRulesets
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: microsoft/AL-Go/Actions/ReadSecrets@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/ReadSecrets@EnableExternalRulesets
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -323,7 +323,7 @@ jobs:
           useGhTokenWorkflowForPush: '${{ github.event.inputs.useGhTokenWorkflow }}'
 
       - name: Update Version Number
-        uses: microsoft/AL-Go/Actions/IncrementVersionNumber@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/IncrementVersionNumber@EnableExternalRulesets
         with:
           shell: powershell
           token: ${{ steps.ReadSecrets.outputs.TokenForPush }}
@@ -341,7 +341,7 @@ jobs:
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: microsoft/AL-Go/Actions/WorkflowPostProcess@eabe480ba72260c6805e575f6bd03ac129367160
+        uses: freddydk/AL-Go/Actions/WorkflowPostProcess@EnableExternalRulesets
         with:
           shell: powershell
           eventId: "DO0094"
