--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -87,7 +87,7 @@ jobs:
             lfs: true
 
         - name: Read settings
-          uses: freddydk/AL-Go/Actions/ReadSettings@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/ReadSettings@main
           with:
             shell: ${{ inputs.shell }}
             project: ${{ inputs.project }}
@@ -96,17 +96,15 @@ jobs:
         - name: Read secrets
           id: ReadSecrets
           if: github.event_name != 'pull_request'
-          uses: freddydk/AL-Go/Actions/ReadSecrets@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/ReadSecrets@main
           with:
             shell: ${{ inputs.shell }}
             gitHubSecrets: ${{ toJson(secrets) }}
             getSecrets: '${{ inputs.secrets }},appDependencyProbingPathsSecrets'
 
         - name: Determine ArtifactUrl
-          uses: freddydk/AL-Go/Actions/DetermineArtifactUrl@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/DetermineArtifactUrl@main
           id: determineArtifactUrl
-          env:
-            Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
           with:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
@@ -121,7 +119,7 @@ jobs:
 
         - name: Download Project Dependencies
           id: DownloadProjectDependencies
-          uses: freddydk/AL-Go/Actions/DownloadProjectDependencies@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/DownloadProjectDependencies@main
           env:
             Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
           with:
@@ -132,7 +130,7 @@ jobs:
 
         - name: Run pipeline
           id: RunPipeline
-          uses: freddydk/AL-Go/Actions/RunPipeline@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/RunPipeline@main
           env:
             Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
             BuildMode: ${{ inputs.buildMode }}
@@ -148,7 +146,7 @@ jobs:
         - name: Sign
           if: inputs.signArtifacts && env.doNotSignApps == 'False' && env.keyVaultCodesignCertificateName != ''
           id: sign
-          uses: freddydk/AL-Go/Actions/Sign@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/Sign@main
           with:
             shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
             azureCredentialsJson: ${{ secrets.AZURE_CREDENTIALS }}
@@ -157,7 +155,7 @@ jobs:
 
         - name: Calculate Artifact names
           id: calculateArtifactsNames
-          uses: freddydk/AL-Go/Actions/CalculateArtifactNames@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/CalculateArtifactNames@main
           if: success() || failure()
           with:
             shell: ${{ inputs.shell }}
@@ -243,7 +241,7 @@ jobs:
         - name: Analyze Test Results
           id: analyzeTestResults
           if: success() || failure()
-          uses: freddydk/AL-Go/Actions/AnalyzeTests@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/AnalyzeTests@main
           with:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
@@ -251,7 +249,7 @@ jobs:
 
         - name: Cleanup
           if: always()
-          uses: freddydk/AL-Go/Actions/PipelineCleanup@EnableExternalRulesets
+          uses: freddydk/AL-Go/Actions/PipelineCleanup@main
           with:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
